--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "sass",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./css/style.css",
+    "sass": "sass --watch ./sass/main.scss:./css/prefixed/style.css",
     "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed"
   },
   "author": "sean",
